create vehicles and require login to edit them

--- a/app/views/layout/application.html.haml
+++ b/app/views/layout/application.html.haml
@@ -7,6 +7,7 @@
     %meta{"http-equiv" => "content-type",
           "content" => "text/html; charset=utf-8"}
     = css_include_tag :reset, :application
+    = js_include_tag 'jquery'
     = auto_link # this is awesome.  See docs.
   %body
     .header
