--- a/app/views/vehicles/edit.html.haml
+++ b/app/views/vehicles/edit.html.haml
@@ -1,4 +1,5 @@
 .h1 edit existing vehicle
 
-= partial :form
-= submit "Confirm"
+= form_for(@vehicle, :action => resource(@vehicle)) do
+  = partial :form
+  = submit "Confirm"
